objects/Lead.object
<CustomObject>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
</CustomObject>